# 2015VisionCode

./: .gitignore  .gitignore.swp  README.md  error  set_freq.sh  test.txt  zv.conf
C920VideoCap/: C920Camera.cpp  C920Camera.h  C920VideoCap.cpp  CMakeLists.txt  Makefile
bindetection/: .gitignore  Args.cpp  Args.hpp  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  CopyOfCMakeCache.txt  Distance Data.ods  Makefile  WriteOnFrame.cpp  WriteOnFrame.cpp~  WriteOnFrame.hpp  WriteOnFrame.hpp~  c920camerain.cpp  c920camerain.hpp  camerain.cpp  camerain.hpp  classifierio.cpp  classifierio.hpp  cmake_install.cmake  detectstate.cpp  detectstate.hpp  fpstest.cpp  frameticker.hpp  gaTesting  gaTesting.cpp  gputest.cpp  histogram.cpp  imagedetect.cpp  imagedetect.hpp  imagein.cpp  imagein.hpp  mediain.cpp  mediain.hpp  objdetect.cpp  objdetect.hpp  rmclassifier.sh  test  test.cpp  test.cpp~  (+12 more)
bindetection/classifier_bin_2/: b2.bat  cascade.xml  stage11.xml  stage5.xml  stage6.xml  stage7.xml  stage8.xml
bindetection/classifier_bin_3/: b2.bat  stage0.xml  stage10.xml  stage11.xml  stage12.xml  stage13.xml  stage14.xml  stage3.xml  stage4.xml
bindetection/classifier_bin_4/: cascade_20.xml  cascade_25.xml  params.xml  stage10.xml  stage16.xml  stage17.xml  stage2.xml  stage21.xml  stage23.xml  stage3.xml  stage6.xml  stage8.xml
bindetection/classifier_bin_4/bak/: cascade_13.xml  stage14.xml  stage16.xml  stage19.xml
bindetection/galib247/: .gitignore  README.md  makevars  makevars.vcpp
bindetection/galib247/examples/: .gitignore  ex1  ex10  ex11  ex12  ex13  ex14  ex15  ex16  ex17  ex18  ex19  ex1_kj  ex2  ex20  ex21  ex22  ex23  ex24  ex25  ex26  ex27  ex3  ex4  ex5  ex6  ex7  ex8  ex9  makefile  randtest
bindetection/galib247/ga/: makefile.vcpp
camera_cal/: CMakeLists.txt  README.md  camera_cal.cpp
cascade_training/: .gitignore  create_cascade.sh  createtrainsamples.pl  foo.sh  make_fast_cascade.pl  outout.txt  output.txt  output2.txt  prep.sh  randomize_dat.pl  redo_negatives.sh  remove_small_duplicates.pl  restart_training.sh  run_training.pl  time_cascades.pl  time_cascades_to_csv.pl  train.sh
cascade_training/classifier_bin_10/: cascade_1.xml  cascade_10.xml  cascade_11.xml  cascade_12.xml  cascade_13.xml  cascade_14.xml  cascade_15.xml  cascade_16.xml  cascade_17.xml  cascade_18.xml  cascade_19.xml  cascade_2.xml  cascade_20.xml  cascade_21.xml  cascade_22.xml  cascade_3.xml  cascade_4.xml  cascade_5.xml  cascade_6.xml  cascade_7.xml  cascade_8.xml  cascade_9.xml  cascade_oldformat_10.xml  readme.txt  stage0.xml  stage1.xml  stage10.xml  stage11.xml  stage12.xml  stage13.xml  stage14.xml  stage15.xml  stage16.xml  stage17.xml  stage18.xml  stage19.xml  stage2.xml  stage20.xml  stage21.xml  stage3.xml  (+6 more)
cascade_training/classifier_bin_11/: cascade_1.xml  cascade_10.xml  cascade_11.xml  cascade_12.xml  cascade_13.xml  cascade_14.xml  cascade_15.xml  cascade_16.xml  cascade_17.xml  cascade_18.xml  cascade_19.xml  cascade_2.xml  cascade_20.xml  cascade_21.xml  cascade_22.xml  cascade_23.xml  cascade_24.xml  cascade_25.xml  cascade_26.xml  cascade_27.xml  cascade_28.xml  cascade_29.xml  cascade_3.xml  cascade_30.xml  cascade_31.xml  cascade_4.xml  cascade_5.xml  cascade_6.xml  cascade_7.xml  cascade_8.xml  cascade_9.xml  prep.sh  run_training.pl  stage0.xml  stage1.xml  stage10.xml  stage11.xml  stage12.xml  stage13.xml  stage14.xml  (+24 more)
cascade_training/classifier_bin_12/: cascade_1.xml  cascade_10.xml  cascade_11.xml  cascade_12.xml  cascade_13.xml  cascade_14.xml  cascade_15.xml  cascade_16.xml  cascade_17.xml  cascade_18.xml  cascade_19.xml  cascade_2.xml  cascade_20.xml  cascade_21.xml  cascade_22.xml  cascade_23.xml  cascade_24.xml  cascade_25.xml  cascade_26.xml  cascade_27.xml  cascade_28.xml  cascade_29.xml  cascade_3.xml  cascade_30.xml  cascade_31.xml  cascade_32.xml  cascade_33.xml  cascade_34.xml  cascade_35.xml  cascade_36.xml  cascade_37.xml  cascade_4.xml  cascade_5.xml  cascade_6.xml  cascade_7.xml  cascade_8.xml  cascade_9.xml  createtrainsamples.pl  prep.sh  run_training.pl  (+37 more)
cascade_training/classifier_bin_13/: cascade_1.xml  cascade_10.xml  cascade_11.xml  cascade_12.xml  cascade_13.xml  cascade_14.xml  cascade_15.xml  cascade_16.xml  cascade_17.xml  cascade_18.xml  cascade_19.xml  cascade_2.xml  cascade_20.xml  cascade_21.xml  cascade_22.xml  cascade_23.xml  cascade_24.xml  cascade_25.xml  cascade_26.xml  cascade_27.xml  cascade_28.xml  cascade_29.xml  cascade_3.xml  cascade_30.xml  cascade_31.xml  cascade_32.xml  cascade_33.xml  cascade_34.xml  cascade_35.xml  cascade_36.xml  cascade_4.xml  cascade_5.xml  cascade_6.xml  cascade_7.xml  cascade_8.xml  cascade_9.xml  run_training.pl  stage0.xml  stage1.xml  stage10.xml  (+33 more)
cascade_training/classifier_bin_4/: cascade.xml  cascade_1.xml  cascade_10.xml  cascade_11.xml  cascade_12.xml  cascade_13.xml  cascade_14.xml  cascade_15.xml  cascade_16.xml  cascade_17.xml  cascade_18.xml  cascade_19.xml  cascade_2.xml  cascade_20.xml  cascade_21.xml  cascade_22.xml  cascade_23.xml  cascade_24.xml  cascade_25.xml  cascade_26.xml  cascade_27.xml  cascade_28.xml  cascade_3.xml  cascade_4.xml  cascade_5.xml  cascade_6.xml  cascade_7.xml  cascade_8.xml  cascade_9.xml  cascade_oldformat_1.xml  cascade_oldformat_10.xml  cascade_oldformat_11.xml  cascade_oldformat_12.xml  cascade_oldformat_13.xml  cascade_oldformat_14.xml  cascade_oldformat_15.xml  cascade_oldformat_16.xml  cascade_oldformat_17.xml  cascade_oldformat_18.xml  cascade_oldformat_19.xml  (+50 more)
cascade_training/classifier_bin_5/: cascade.xml  cascade_1.xml  cascade_10.xml  cascade_11.xml  cascade_12.xml  cascade_13.xml  cascade_14.xml  cascade_15.xml  cascade_16.xml  cascade_17.xml  (+92 more)
create_grayscale/: CMakeLists.txt  main.cpp  regrabImage.cpp
detection for empty/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  run.sh  test.cpp
framegrabber/: .gitignore  CMakeLists.txt  framegrabber.cpp
fvs/: CMakeLists.txt  fvs.cpp
ga/: CMakeLists.txt
ga/galib247/: .gitignore
ga/galib247/examples/: .gitignore  ex1_kj.C
ga/galib247/ga/: GA2DArrayGenome.C
(+443 files in other folders)
